added shopping cart but still got error

--- a/OnlineShopping/Views/Customer/RegisterCustomer.cshtml
+++ b/OnlineShopping/Views/Customer/RegisterCustomer.cshtml
@@ -12,7 +12,7 @@
     @Html.TextBox("name", null, new { placeholder = "Insert your full name..." });<br />
 
     @Html.Label("password:");
-    @Html.TextBox("pass", null, new { placeholder = "Insert your password..." }); <br />
+    @Html.TextBox("pass", null, new { placeholder = "Insert your password...", type="password" }); <br />
 
     <button type="submit">Register</button>
 }
