--- a/OnlineShopping/Views/Customer/RegisterCustomer.cshtml
+++ b/OnlineShopping/Views/Customer/RegisterCustomer.cshtml
@@ -7,9 +7,10 @@
 
 @using (Html.BeginForm("CustomerProfile","Customer"))
 {
-    
-    @Html.Label("Name:");
-    @Html.TextBox("name", null, new { placeholder = "Insert your full name..." });<br />
+    <div class="form-group">
+        @Html.Label("Name:");
+        @Html.TextBox("name", null, new { placeholder = "Enter name" });<br />
+    </div>
 
     @Html.Label("password:");
     @Html.TextBox("pass", null, new { placeholder = "Insert your password...", type="password" }); <br />
